<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.terracotta.utils</groupId>
	<artifactId>cyberplugfest-eventgenerator</artifactId>
	<version>0.0.1</version>
	<name>Cyber Plugfest Event Generator</name>
	<description>Cyber Plugfest Event Generator</description>

	<properties>
		<org.springframework.version>3.1.1.RELEASE</org.springframework.version>
		<slf4j.version>1.6.1</slf4j.version>
		<junit.version>4.6</junit.version>
		<quartz-ee.version>2.1.7</quartz-ee.version>
		<ehcache-core-ee.version>2.6.3</ehcache-core-ee.version>
		<ehcache-terracotta-ee.version>2.6.3</ehcache-terracotta-ee.version>
	</properties>

	<developers>
		<developer>
			<id>fsanglie</id>
			<name>Fabien Sanglier</name>
			<email>fsanglie@terracottatech.com</email>
			<url>http://www.terracotta.org</url>
			<organization>Terracotta, Inc.</organization>
			<organizationUrl>http://www.terracotta.org</organizationUrl>
			<timezone>-6</timezone>
		</developer>
	</developers>

	<dependencies>
		<!-- Spring JMS -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jms</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.jms</groupId>
			<artifactId>jms-api</artifactId>
			<version>1.1-rev-1</version>
			<scope>provided</scope>
		</dependency>

		<!-- EhCache -->
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core-ee</artifactId>
			<version>${ehcache-core-ee.version}</version>
		</dependency>

		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-terracotta-ee</artifactId>
			<version>${ehcache-terracotta-ee.version}</version>
		</dependency>

		<!-- Quartz -->
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>${quartz-ee.version}</version>
		</dependency>

		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- Junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.2.2</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>
				<configuration>
					<repositoryLayout>flat</repositoryLayout>
					<!-- Extra JVM arguments that will be included in the bin scripts -->
					<extraJvmArguments>-Xms512m -Xmx512m -XX:MaxPermSize=256m
						-XX:+UseParallelOldGC -XX:+UseCompressedOops
						-XX:MaxDirectMemorySize=10G
						-Dcom.tc.productkey.path=${user.home}/terracotta-license.key</extraJvmArguments>
					<programs>
						<program>						
							<mainClass>org.terracotta.demo.cyberplugfest.DemoLauncher</mainClass>
							<name>DemoLauncher</name>
						</program>
					</programs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<jmsFactory>com.pcbsys.nirvana.nSpace.NirvanaContextFactory</jmsFactory>
				<jmsUrl>nsp://localhost:9002/</jmsUrl>
				<jmsConnectionFactory>CyberPlugFestConnectionFactory</jmsConnectionFactory>
				<jmsDestination>cyberplugfest/postransactions</jmsDestination>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>
				<jmsFactory>com.pcbsys.nirvana.nSpace.NirvanaContextFactory</jmsFactory>
				<jmsUrl>nsp://ec2-54-225-114-92.compute-1.amazonaws.com:9000</jmsUrl>
				<jmsConnectionFactory>CyberPlugFestConnectionFactory</jmsConnectionFactory>
				<jmsDestination>cyberplugfest/postransactions</jmsDestination>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>terracotta-snapshots</id>
			<url>http://www.terracotta.org/download/reflector/snapshots</url>
		</repository>
		<repository>
			<id>terracotta-releases</id>
			<url>http://www.terracotta.org/download/reflector/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
</project>
